@@ -4,21 +4,23 @@ use 5.008;
 use strict;
 use warnings;
 use Carp        ();
+use File::Spec  ();
+use YAML::Tiny  qw(LoadFile);
+
 use Padre::Help ();
+use Padre::Util ();
 
 our $VERSION = '0.22';
 our @ISA     = 'Padre::Help';
 
-
-my %topics = (
-	'padding' => 'length | percentage (4 values), inherit',
-	'color'   => 'Color of an element. Values can be RGB: #AABBCC',
-);
+my $data;
 
 sub help_init {
 	my ($self) = @_;
 
 	# TODO read the "topics" from some external file?
+	my $help_file = File::Spec->catfile(Padre::Util::share('CSS'), 'css.yml');
+	$data = LoadFile($help_file);
 
 	return;
 }
@@ -26,15 +28,19 @@ sub help_init {
 sub help_list {
 	my ($self) = @_;
 
-	return [keys %topics];
+	return [keys %{ $data->{topics} }];
 }
 
 sub help_render {
 	my ( $self, $topic ) = @_;
 
-warn "'$topic'";
+	#warn "'$topic'";
 	$topic =~ s/://;
-	my $html = "$topic $topics{$topic}";
+	my $html = "No help found for '$topic'";
+	if ($data->{topics}{$topic}) {
+		$html = "$topic $data->{topics}{$topic}";
+		$html =~ s/REPLACE_(\w+)/$data->{replace}{$1}/g;
+	}
 	my $location = $topic;
 	return ( $html, $location );
 }
